# fastapi-mongo-example

./: .dockerignore  .gitignore  README.md  config.py  docker-compose.yml
app/: Dockerfile  logging.conf  main.py  pyproject.toml  start.sh
app/db/: session.py
