[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
pymongo = "^4.6.1"
pydantic-settings = "^2.1.0"
pydantic = {extras = ["email"], version = "^2.6.1"}
httpx = "^0.26.0"
python-multipart = "^0.0.7"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.1.1"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
